# timer_interrupt_blinky

./: .gitignore  CMakeLists.txt  README.md  build.sh  flash.sh  run.sh
Core/Src/: main.c  runtime_stubs.c
Linker/: STM32F411RETX_FLASH.ld
Startup/: 01_timer_interrupt_blinky.code-workspace
